--- a/src/Layout/Common/Component/UserMenuModal/UserMenuModal.css
+++ b/src/Layout/Common/Component/UserMenuModal/UserMenuModal.css
@@ -1,5 +1,5 @@
 /* Меню пользователя */
-div.user-menu { z-index: 21; flex-direction: row-reverse; }
+div.user-menu { z-index: 71; flex-direction: row-reverse; }
 div.user-menu nav { width: calc((var(--min-width) - var(--desktop-gap))); box-sizing: border-box; background: #fff; line-height: 1;  box-shadow:0 0 3px 1px rgba(0,0,0,0.2); }
 div.user-menu p { padding: var(--desktop-gap) 0 15px; margin: 0 var(--desktop-gap); }
 div.user-menu p b { color: #111; display: inline-block; max-width: 240px; text-overflow: ellipsis; vertical-align: middle; white-space: nowrap; overflow-x: hidden; }
