--- a/src/Layout/Serial/Component/ReaderMenu/ReaderMenu.css
+++ b/src/Layout/Serial/Component/ReaderMenu/ReaderMenu.css
@@ -1,6 +1,7 @@
 section.serial-reader-menu {
 	height: 40px; background: var(--brand-grey); overflow: hidden;
 	display: flex; justify-content: space-between;
+	position: relative; z-index: 50;
 }
 
 section.serial-reader-menu button.subscribe-button { flex-shrink: 0; }
